--- a/mail/templates/mail/settings.html
+++ b/mail/templates/mail/settings.html
@@ -34,213 +34,212 @@
 
         </div>
     </article>
-    {% load static%}
-    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src='{% static "mail/js/utils.js" %}'> </script>
-    <script type="text/javascript">
-        const fullPath = window.location.href
-        let tabFullPath = fullPath.split('/')
-        let param = tabFullPath[tabFullPath.length-1]
-        const auto = document.getElementById('auto')
-        const formSettings = document.getElementById('formSettings')
-        const colors = ['green', 'tomato'];
-        let count = 0
-        let csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
-        
-        const BackToCNS = function(){
-            pageName = 'settings'
-            BackCNS(pageName)
-        }
-        //for ajax
-        const csrfSafeMethod = function(method) {
-            // these HTTP methods do not require CSRF protection
-            return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
-        }
+</section>
+{% load static%}
+<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+<script type="text/javascript" src='{% static "mail/js/utils.js" %}'> </script>
+<script type="text/javascript">
+    const auto = document.getElementById('auto')
+    const formSettings = document.getElementById('formSettings')
+    const colors = ['green', 'tomato'];
+    let count = 0
+    param = GetParam()
+    const BackToCNS = function(){
+        pageName = 'settings'
+        BackCNS(pageName, "{% url 'mail:cns'%}")
+    }
+    //for ajax
+    const csrfSafeMethod = function(method) {
+        // these HTTP methods do not require CSRF protection
+        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+    }
 
-        //*****toggle form
-        //display form
-        const appearChoice = function(){
-            $.ajaxSetup({
-                beforeSend: function (xhr, settings) {
-                    // if not safe, set csrftoken
-                    if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                        xhr.setRequestHeader("X-CSRFToken", csrftoken);
-                    }
-                }
-            }); 
-            $.ajax( 
-            { 
-                type:"POST", 
-                url: "{% url 'mail:settings'%}", 
-                dataType: 'json',
-                data: {'ajax':Number(1), 'mail_id':param, 'auto_send':1},
-                success: function (res) {
-                auto.textContent = "Je souhaite envoyer ce mail automatiquement ..."
-                formSettings.classList.remove("d-none");
-                formSettings.classList.add("d-flex");
-                document.getElementById('id_frequency_0').checked = true; 
-                },
-                error: function (res) {
-                    alert("erreur lors de l'envoie de données");
-                    console.log(res.status);
-                    console.log(res.error);
-                }
-            });
-        }
-        //remove form
-        const disappearChoice = function(){
-            $.ajaxSetup({
-                beforeSend: function (xhr, settings) {
-                    // if not safe, set csrftoken
-                    if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
-                        xhr.setRequestHeader("X-CSRFToken", csrftoken);
-                    }
-                }
-            }); 
-            $.ajax({ 
-                type:"POST", 
-                url: "{% url 'mail:settings'%}", 
-                dataType: 'json',
-                data: {'ajax':Number(1), 'mail_id':param, 'auto_send':0},
-                success: function (res) {
-                    auto.textContent = "Je ne souhaite pas envoyer ce mail automatiquement."
-                    formSettings.classList.remove("d-flex");
-                    formSettings.classList.add("d-none");
-                    
-                },
-                error: function (res) {
-                    alert("erreur lors de l'envoie de données");
-                    console.log(res.status);
-                    console.log(res.error);
-                }
-            })
-        }
-        //choose display or remove
-        auto.onclick = function () {
-            if (count == 0){
-                appearChoice();
-                count = 1;
-            }
-            else if (count == 1){
-                disappearChoice();
-                count = 0;
-            }
-            color = colors.shift();
-            colors.push(color);
-            auto.style.backgroundColor = color;
-        };
-
-        //****** additionnal input for id_frequency_2
-        const getAdditionnalInputForFreq2 = function(){
-            inputMonth = document.getElementById('id_frequency_2')
-            inputMonth.parentNode.innerHTML = '<input type="radio" name="frequency" value="3" required="" id="id_frequency_2"> quand l\'animal a plus de {{form.age}} mois.</input>'
-            ageField =  document.getElementById('id_age')
-            ageField.style.width="5rem"
-            const button1 = ageField.previousSibling.previousElementSibling
-            ageField.onclick = () => {
-                button1.checked = true
-            }
-            return button1
-        }
-        //****** additionnal input for id_frequency_3
-        const getAdditionnalInputForFreq3 = function(){
-            inputDate = document.getElementById('id_frequency_3')
-            inputDate.parentNode.innerHTML = '<input type="radio" name="frequency" value="4" required="" id="id_frequency_3"> à la date du {{form.date}}</input>'
-            dateField =  document.getElementById('id_date')
-            dateField.style.width="8rem"
-            dateField.placeholder="jj/mm/aaaa"
-            const button2 = dateField.previousSibling.previousElementSibling
-            dateField.onclick = () => {
-                button2.checked = true
-            }
-            return button2
-        }
-        //******ctrl before send form
-        const activeCTRL = function(but3, but4){
-            formSettings.addEventListener("submit", function (e) {
-                //check the mail
-                let verif = document.getElementById('verif'); 
-                but1 = document.getElementById('id_frequency_0')
-                but2 = document.getElementById('id_frequency_1')
-                console.log('but1 : ',but1.checked);
-                console.log('but2 : ',but2.checked);
-                console.log('but3 : ',but3.checked);
-                console.log('but4 : ',but4.checked);
-                if (but1.checked || but2.checked){
-                    ageField.value = ""
-                    dateField.value = ""
-
-                }
-                else if (but3.checked){
-                    if (ageField.value > 0 ){
-                        //pass
-                    } else{
-                        console.log('age :', ageField.value)
-                        verif.textContent = "rempli l'âge du champ en rouge";
-                        ageField.style.border = "2px red solid";
-                        ageField.style.color = "red";
-                        e.preventDefault()
-                    }
-                }
-                else if (but4.checked){
-                    const regex_date = /^([0-2]\d|3[0-1])\/(0\d|1[0-2])\/(\d{4})$/; 
-                    if (regex_date.test(dateField.value)){
-                        //pass
-                    } else{
-                        verifText = dateField.value + " n'est pas une date au format jj/mm/aaa"
-                        verif.textContent = verifText ;
-                        dateField.style.border = "2px red solid";
-                        dateField.style.color = "red";
-                        e.preventDefault();
-                        return
-                    }
-                }
-            })
-        }
-        
-        //******fill the form
-        const fillForm = function(){
-            keys = ['{{mail.send_after_creation}}', '{{mail.send_after_modif}}']
-            keys2 = ['{{mail.send_when_x_month}}', '{{mail.send_at_this_date}}']
-            for (index in keys){
-                if (keys[index] != 'False'){
-                    document.getElementById('id_frequency_'+index).checked = true;
-                    break; 
-                };
-            }
-            for (index in keys2){
-                if (keys2[index] != 'None'){
-                    console.log(keys2[index]);
-
-                    elem = document.getElementById('id_frequency_'+(Number(index)+2));
-                    elem.checked = true;
-                    elem.nextElementSibling.value = keys2[index] ;
-                    break;
+    //*****toggle form
+    //display form
+    const appearChoice = function(){
+        $.ajaxSetup({
+            beforeSend: function (xhr, settings) {
+                // if not safe, set csrftoken
+                if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                    xhr.setRequestHeader("X-CSRFToken", csrftoken);
                 }
             }
-        }
-
-
-        let main = function() {
-            {% if mail.auto_send%}
+        }); 
+        $.ajax( 
+        { 
+            type:"POST", 
+            url: "{% url 'mail:settings'%}", 
+            dataType: 'json',
+            data: {'ajax':Number(1), 'mail_id':param, 'auto_send':1},
+            success: function (res) {
             auto.textContent = "Je souhaite envoyer ce mail automatiquement ..."
             formSettings.classList.remove("d-none");
             formSettings.classList.add("d-flex");
-            auto.style.backgroundColor = colors[0];
-            {% else %}
-            disappearChoice();
-            auto.style.backgroundColor = colors[1];
-            {% endif%}
-            const butt3 = getAdditionnalInputForFreq2()
-            const butt4 = getAdditionnalInputForFreq3()
-            auto.classList.remove("d-none");
-            auto.classList.add("d-flex");
-            fillForm()
-            activeCTRL(butt3, butt4)
+            document.getElementById('id_frequency_0').checked = true; 
+            },
+            error: function (res) {
+                alert("erreur lors de l'envoie de données");
+                console.log(res.status);
+                console.log(res.error);
+            }
+        });
+    }
+    //remove form
+    const disappearChoice = function(){
+        $.ajaxSetup({
+            beforeSend: function (xhr, settings) {
+                // if not safe, set csrftoken
+                if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                    xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                }
+            }
+        }); 
+        $.ajax({ 
+            type:"POST", 
+            url: "{% url 'mail:settings'%}", 
+            dataType: 'json',
+            data: {'ajax':Number(1), 'mail_id':param, 'auto_send':0},
+            success: function (res) {
+                auto.textContent = "Je ne souhaite pas envoyer ce mail automatiquement."
+                formSettings.classList.remove("d-flex");
+                formSettings.classList.add("d-none");
+                
+            },
+            error: function (res) {
+                alert("erreur lors de l'envoie de données");
+                console.log(res.status);
+                console.log(res.error);
+            }
+        })
+    }
+    //choose display or remove
+    auto.onclick = function () {
+        if (count == 0){
+            appearChoice();
+            count = 1;
         }
-        $(document).ready(function() { 
-            main() });
+        else if (count == 1){
+            disappearChoice();
+            count = 0;
+        }
+        color = colors.shift();
+        colors.push(color);
+        auto.style.backgroundColor = color;
+    };
 
-    </script>
-</section>
+    //****** additionnal input for id_frequency_2
+    const getAdditionnalInputForFreq3 = function(){
+        inputMonth = document.getElementById('id_frequency_3')
+        inputMonth.parentNode.innerHTML = '<input type="radio" name="frequency" value="3" required="" id="id_frequency_2"> quand l\'animal a plus de {{form.age}} mois.</input>'
+        ageField =  document.getElementById('id_age')
+        ageField.style.width="5rem"
+        const button1 = ageField.previousSibling.previousElementSibling
+        ageField.onclick = () => {
+            button1.checked = true
+        }
+        return button1
+    }
+    //****** additionnal input for id_frequency_3
+    const getAdditionnalInputForFreq4 = function(){
+        inputDate = document.getElementById('id_frequency_4')
+        inputDate.parentNode.innerHTML = '<input type="radio" name="frequency" value="4" required="" id="id_frequency_3"> à la date du {{form.date}}</input>'
+        dateField =  document.getElementById('id_date')
+        dateField.style.width="8rem"
+        dateField.placeholder="jj/mm/aaaa"
+        const button2 = dateField.previousSibling.previousElementSibling
+        dateField.onclick = () => {
+            button2.checked = true
+        }
+        return button2
+    }
+    //******ctrl before send form
+    const activeCTRL = function(but4, but5){
+        formSettings.addEventListener("submit", function (e) {
+            //check the mail
+            let verif = document.getElementById('verif'); 
+            but1 = document.getElementById('id_frequency_0')
+            but2 = document.getElementById('id_frequency_1')
+            but3 = document.getElementById('id_frequency_2')
+            console.log('but1 : ',but1.checked);
+            console.log('but2 : ',but2.checked);
+            console.log('but3 : ',but3.checked);
+            console.log('but4 : ',but4.checked);
+            console.log('but5 : ',but5.checked);
+            if (but1.checked || but2.checked || but3.checked){
+                ageField.value = ""
+                dateField.value = ""
+
+            }
+            else if (but3.checked){
+                if (ageField.value > 0 ){
+                    //pass
+                } else{
+                    console.log('age :', ageField.value)
+                    verif.textContent = "rempli l'âge du champ en rouge";
+                    ageField.style.border = "2px red solid";
+                    ageField.style.color = "red";
+                    e.preventDefault()
+                }
+            }
+            else if (but4.checked){
+                const regex_date = /^([0-2]\d|3[0-1])\/(0\d|1[0-2])\/(\d{4})$/; 
+                if (regex_date.test(dateField.value)){
+                    //pass
+                } else{
+                    verifText = dateField.value + " n'est pas une date au format jj/mm/aaa"
+                    verif.textContent = verifText ;
+                    dateField.style.border = "2px red solid";
+                    dateField.style.color = "red";
+                    e.preventDefault();
+                    return
+                }
+            }
+        })
+    }
+    
+    //******fill the form
+    const fillForm = function(){
+        keys = ['{{mail.send_after_creation}}', '{{mail.send_after_modif}}', '{{mail.send_after_delete}}']
+        keys2 = ['{{mail.send_when_x_month}}', '{{mail.send_at_this_date}}']
+        for (index in keys){
+            if (keys[index] != 'False'){
+                document.getElementById('id_frequency_'+index).checked = true;
+                break; 
+            };
+        }
+        for (index in keys2){
+            if (keys2[index] != 'None'){
+                console.log(keys2[index]);
+
+                elem = document.getElementById('id_frequency_'+(Number(index)+2));
+                elem.checked = true;
+                elem.nextElementSibling.value = keys2[index] ;
+                break;
+            }
+        }
+    }
+
+
+    let main = function() {
+        {% if mail.auto_send%}
+        auto.textContent = "Je souhaite envoyer ce mail automatiquement ..."
+        formSettings.classList.remove("d-none");
+        formSettings.classList.add("d-flex");
+        auto.style.backgroundColor = colors[0];
+        {% else %}
+        disappearChoice();
+        auto.style.backgroundColor = colors[1];
+        {% endif%}
+        const butt3 = getAdditionnalInputForFreq3()
+        const butt4 = getAdditionnalInputForFreq4()
+        auto.classList.remove("d-none");
+        auto.classList.add("d-flex");
+        fillForm()
+        activeCTRL(butt3, butt4)
+    }
+    $(document).ready(function() { 
+        main() });
+
+</script>
+
 {% endblock%}
