--- a/mail/templates/mail/index.html
+++ b/mail/templates/mail/index.html
@@ -17,7 +17,7 @@
 			<!-- nvl ligne -->
 				<form id ="mail_form" action="{% url 'mail:index'%}" method="POST">
 					{% csrf_token %} 
-	                <table >
+	                <table class="mail-index" >
 	                    <tr>
 	                        <td>&nbsp;</td>
 	                        <td>nom</td>
