us14 : (Local+prod) Server sends mail using sendGrid after new sheet creation (sending automail > trace written in db)

--- a/sheet/templates/sheet/historic.html
+++ b/sheet/templates/sheet/historic.html
@@ -30,7 +30,7 @@
                  <td>{{contact.contact_date}}</td>
                  <td>{{contact.str_nature}}</td>
                  <td>{{contact.resume}}</td>
-                 <td>{{contact.full_text}}</td>
+                 <td>{{contact.reduced_text|escape}}</td>
              </tr>
              {% endfor %}
          </table>
