us15 : As a dev I give information about app(FAQ + README)

--- a/info/templates/info/index.html
+++ b/info/templates/info/index.html
@@ -6,7 +6,9 @@
 		<div class="row">
 			<div class="col-1 text-center "></div>
 			<div class="col-4 text-center mail-but d-flex align-items-center justify-content-center">
-				<p>Foire aux questions </p>
+				<p>
+					<a href="https://docs.google.com/document/d/17CtaIb-c2ylt5iEky9Y3fHiIh-EipxYPcT_qPN4f71c/edit?usp=sharing" target="_blank">Foire aux questions </a>
+				</p>
 			</div>
 
 			<div class="col-2 text-center"></div>
@@ -23,7 +25,7 @@
 			 </div>
 			<div class="col-2 text-center"></div>
 			<div class="col-3 text-center mail-but d-flex align-items-center justify-content-center">
-				<p>code source</p>
+				<p><a href="https://github.com/blingstand/projet13" target="_blank">code source</a></p>
 			</div>
 			<div class="col-2 text-center"></div>
 		</div>
